2008-10-23  David Teller  <David.Teller@univ-orleans.fr>

	* src/core/toolchain/batteries_help.ml: [register] now catches and prints exceptions

	* src/core/baselib/batlib_Baselib_Printexc.mli: Fixed documentation typo.

	* src/syntax/pa_batteries/_tags: [debug] added

	* src/syntax/pa_batteries/pa_batteries.ml: [top_phrase], [top_phrase_next] added

	* src/core/extlib/ref.mli: [protect] added

	* src/syntax/pa_where/pa_where.ml: in [expr], [test_where_let] is now unused

	* top.ml: created

	* bocaml: created

	* build/odoc_generator_batlib.ml: in [generate_external_index] added special case for types

	* src/core/toolchain/batteries_help.ml: [auto_register] created

	* src/core/batteries_config.ml*: created

	* src/core/extlib/extPrintf.mli: Fixed documentation typo.

	* config.pre: created

	* Makefile: [BROWSER], [instdoc] added

2008-10-22  David Teller  <David.Teller@univ-orleans.fr>

	* src/core/toolchain/batteries_help.ml: Added directives

	* src/syntax/pa_batteries/pa_batteries.ml: removed [Toolchain.Help]

	* src/core/toolchain/batteries_help.ml*: [help_*] added

	* src/core/toolchain/batteries_help.ml*: [help] added

	* src/core/toolchain/batteries_help.ml: [register] now uses [Scanf.scanf]

	* src/core/toolchain/batteries_help.ml: [help_aux] now uses [find_help]

	* src/core/toolchain/batteries_help.ml: [find_help] created

	* build/odoc_generator_batlib.ml: in [generate_external_index], changed [fprintf] output string

	* src/syntax/pa_batteries/pa_batteries.ml: [Toolchain.Help] added to [implem]

	* Makefile: in [install], removed [*_pack.cmi]
	
	* src/core/toolchain/batteries_help.ml*: created

	* src/core/toolchain.mlpack: [Batteries_help] added

	* src/core/batteries_core.ml: [Toolchain.Help] added

2008-10-21  David Teller  <David.Teller@univ-orleans.fr>

	* build/odoc_generator_batlib.ml: [generate] now calls [generate_external_index]
	
	* build/odoc_generator_batlib.ml: [generate_external_index] added
